feat: add partial confirmation of holds
